@@ -29,6 +29,7 @@ Hook added to enable/disable editor for description field - CHANGED
 Spain now uses administrative_area_level_2 for regions (this will affect current Spanish listings, you should add new regions and then merge out old ones) -  CHANGED
 Category are not unticked on page refresh for map post type other than default - FIXED
 Synchronize the post reviews if "Synchronize comment on duplicate content" is set - CHANGED
+New title variables added to display country/region/city/neighbourhood - CHANGED
 
 v1.6.15
 Google Services API can conflict with newer version of the Google Service Class - UPDATED
